fix: date-picker dialog on iphone

--- a/src/app/components/date-picker/date-picker.scss
+++ b/src/app/components/date-picker/date-picker.scss
@@ -51,7 +51,9 @@
       fill: none;
       color: $color-text;
       background-color: $color-grey;
-      transition: color 0.2s ease-in-out, background 0.2s ease-in-out;
+      transition:
+        color 0.2s ease-in-out,
+        background 0.2s ease-in-out;
       box-shadow: $card-shadow;
       cursor: pointer;
 
@@ -76,9 +78,9 @@
 }
 
 .close-dialog {
-  position: fixed;
-  right: 1rem;
-  top: 10%;
+  // position: absolute;
+  // top: 1rem;
+  // right: 1rem;
   border-radius: 50%;
   border: 2px solid $color-error;
   background-color: $color-fff;
@@ -87,11 +89,13 @@
   justify-content: center;
   align-items: center;
   width: 3rem;
-  z-index: 999;
+  // z-index: 999;
   height: 3rem;
   box-shadow: $card-shadow;
   cursor: pointer;
-  transition: 0.2s background ease-in-out, color 0.2s ease-in-out;
+  transition:
+    0.2s background ease-in-out,
+    color 0.2s ease-in-out;
 
   @include hover-supported {
     background-color: $color-error;
@@ -99,23 +103,35 @@
   }
 }
 
-.datepicker-dialog {
-  position: fixed;
-  z-index: 999;
-  top: 17%;
-  left: 1rem;
-
-  width: calc(100% - 2rem);
+.container {
+  width: 100%;
   padding: 0.75rem;
+  position: relative;
 
   background: #fff;
   border-radius: $border-radius-S;
-  box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.15), -8px -8px 15px rgba(0, 0, 0, 0.15);
-
+  box-shadow:
+    8px 8px 15px rgba(0, 0, 0, 0.15),
+    -8px -8px 15px rgba(0, 0, 0, 0.15);
 
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 1rem;
+}
+
+.datepicker-dialog {
+  position: fixed;
+  z-index: 19;
+  inset: 0;
+  // background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(2px) saturate(120%);
+  padding: 1rem 1rem 7rem;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .calendar-navigation {
